[workspace]
members = [".", "sys"]
resolver = "3"

[package]
name = "nanavts-spout"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "BSD-2-Clause"
description = "NanaVTS-focused Spout sender output backend"
readme = "README.md"
keywords = ["nanavts", "spout", "spout2", "directx", "directx12"]
categories = ["multimedia", "external-ffi-bindings"]

[lib]
name = "nanavts_spout"

[features]
default = ["cpu-dx11"]
cpu-dx11 = ["nanavts-spout-sys/cpu-dx11"]
gpu-dx12-experimental = ["nanavts-spout-sys/gpu-dx12-experimental"]

[dependencies]
nanavts-spout-sys = { path = "sys", version = "0.1.1", default-features = false }

[target.'cfg(windows)'.dev-dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D12",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Security",
    "Win32_System_Performance",
    "Win32_System_Threading",
] }

[[example]]
name = "cpu_dx11_sender"
required-features = ["cpu-dx11"]

[[example]]
name = "spout_perf"
required-features = ["cpu-dx11", "gpu-dx12-experimental"]

[package.metadata.docs.rs]
# Build docs for the real (Windows) target so the full API is documented.
# The build script skips the native compile when DOCS_RS is set.
default-target = "x86_64-pc-windows-msvc"
all-features = true
