[package]
name = "nanavts-spout-sys"
version = "0.1.1"
edition = "2024"
rust-version = "1.85"
license = "BSD-2-Clause"
description = "Internal NanaVTS Spout sender FFI bindings via a hand-written C++ shim"
links = "spout2"
build = "build.rs"
include = [
    "Cargo.toml",
    "build.rs",
    "src/**",
    "shim/**",
    "vendor/Spout2/LICENSE",
    "vendor/Spout2/SPOUTSDK/licence.txt",
    "vendor/Spout2/SPOUTSDK/SpoutGL/*.cpp",
    "vendor/Spout2/SPOUTSDK/SpoutGL/*.h",
    "vendor/Spout2/SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX.cpp",
    "vendor/Spout2/SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX.h",
    "vendor/Spout2/SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX12/SpoutDX12.cpp",
    "vendor/Spout2/SPOUTSDK/SpoutDirectX/SpoutDX/SpoutDX12/SpoutDX12.h",
]

[lib]
name = "nanavts_spout_sys"

[features]
default = ["cpu-dx11"]
cpu-dx11 = []
gpu-dx12-experimental = []

[build-dependencies]
cc = "1"
